        Reviewed by Maciej Stachowiak.

https://bugs.webkit.org/show_bug.cgi?id=20738
        compareBoundaryPoints gives incorrect results

        Test: fast/dom/Range/compareBoundaryPoints-2.html

        * dom/Range.cpp: (WebCore::Range::compareBoundaryPoints): Correct meanings of START_TO_END
        and END_TO_START.
        * page/DOMSelection.cpp: (WebCore::DOMSelection::addRange): Updated for this change.



Canonical link: https://commits.webkit.org/28712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36423 268f45cc-cd09-0410-ab3c-d52691b4dbfc